# kinetic_pr2

./: .gitignore  README.md  install_pr2_kinetic.sh
src/moveit/moveit_plugins/moveit_ros_control_interface/: CMakeLists.txt
src/moveit/moveit_plugins/moveit_ros_control_interface/src/: controller_manager_plugin.cpp
src/moveit_msgs/: CMakeLists.txt
src/moveit_msgs/srv/: GetKinematicSolverInfo.srv
src/moveit_pr2/pr2_moveit_plugins/: CMakeLists.txt
src/moveit_pr2/pr2_moveit_plugins/pr2_moveit_controller_manager/src/: pr2_moveit_controller_manager.cpp
src/moveit_pr2/tests/pr2_arm_ik_tests/: test_pr2_arm_kinematics_as_plugin.launch
src/moveit_pr2/tests/pr2_planning_interface_tests/: CMakeLists.txt
src/pr2_controller_manager/: CMakeLists.txt
src/pr2_controller_manager/include/pr2_controller_manager/: controller_manager.h
src/pr2_gazebo_plugins/: CMakeLists.txt
src/pr2_mechanism_msgs/: CMakeLists.txt  package.xml
src/pr2_power_drivers/ocean_battery_driver/: CMakeLists.txt  mainpage.dox  package.xml
src/pr2_power_drivers/ocean_battery_driver/src/: CMakeLists.txt
src/pr2_power_drivers/ocean_battery_driver/src/ocean_battery_driver/: CMakeLists.txt  battery_check.cpp  ocean.cpp  ocean.h  server.cpp  testfile.txt
src/pr2_power_drivers/power_monitor/: CMakeLists.txt  package.xml
src/pr2_power_drivers/power_monitor/cfg/: PowerMonitor.cfg
src/pr2_power_drivers/power_monitor/include/: observation.h  power_monitor.h  power_state_estimator.h
src/pr2_power_drivers/power_monitor/src/: observation.cpp  power_monitor.cpp  power_state_estimator.cpp
src/pr2_power_drivers/pr2_power_board/: CMakeLists.txt  gui_power.launch  gui_power2.launch  mainpage.dox  package.xml  power.xml  pr_wiring.yaml  setup.py  test_wires.launch
src/pr2_power_drivers/pr2_power_board/include/: power_comm.h  power_node.h  power_node2.h
src/pr2_power_drivers/pr2_power_board/scripts/: fake_powerboard.py  send_command  test_power.py  view_power
src/pr2_power_drivers/pr2_power_board/src/power_node/: power_node.cpp  power_node2.cpp  power_node_simulator.cpp
src/pr2_power_drivers/pr2_power_board/src/pr2_power_board/: power_wires.py  pr2_power_board_panel.py
src/pr2_power_drivers/pr2_power_board/ui/: pr2_power_board_panel.fbp  pr2_power_board_panel.xrc
src/pr2_power_drivers/pr2_power_drivers/: CMakeLists.txt  package.xml
src/ros_control/controller_manager/src/: controller_manager.cpp
src/ros_control/controller_manager_msgs/msg/: ControllerState.msg  HardwareInterfaceResources.msg
src/ros_control/hardware_interface/include/hardware_interface/: interface_resource.h
src/rqt_pr2_dashboard/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.py
src/rqt_pr2_dashboard/src/rqt_pr2_dashboard/: pr2_battery.py  pr2_breaker.py  pr2_dashboard.py  pr2_motors.py  pr2_runstop.py
src/shape_tools/: .travis.yml  CMakeLists.txt  README.md  package.xml
src/shape_tools/include/shape_tools/: shape_extents.h  shape_to_marker.h  solid_primitive_dims.h
src/shape_tools/src/: shape_extents.cpp  shape_to_marker.cpp
src/testmoveit/: CMakeLists.txt  package.xml
src/testmoveit/src/: move_group_interface_tutorial.cpp
