<?xml version="1.0"?>
<package>
  <name>pr2_mechanism_msgs</name>
  <version>0.0.0</version>
  <maintainer email="richard.kelley@gmail.com">Richard Kelley</maintainer>

  <description>
    This package contains messages related to the PR2 mechanism.
  </description>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
