<package>
  <name>ocean_battery_driver</name>
  <version>1.1.2</version>
  <description>This is an interface to the Ocean Server Technology Intelligent Battery and Power System.</description>
  <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/ocean_battery_driver</url>

  <author>Tully Foote</author>
  <author>Curt Meyers</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>log4cxx</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>log4cxx</run_depend>
</package>
